[package]
name = "chess_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
libchess = { git = "https://github.com/khristoforovs/libchess", version = "0.8.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
